tests/codegen/fail/enum/derive_name_double_underscored.rs
#[derive(juniper::GraphQLEnum)]
enum __Test {
    Test,
}

fn main() {}
